# GalvPyle

./: BiologicData.py  CycVolt.py  GamryCycles.py  GamryData.py  ICI.py  MultiCycVolt.py  Plateaus.py  README.md  Token for eigenfit-upload-1.txt  pyproject.toml
.ipynb_checkpoints/: GamryEIS-checkpoint.py
Development/: 250326_LiS58_Li-S_cell8_1cycPM_discharge_CB2.mpt  Biologic_dev.ipynb  Fixing cycles skipping to 0.ipynb  ICI development.ipynb  Untitled.ipynb  Untitled1.ipynb  new_test_file.xlsx  new_test_file_v2.xlsx  test file.xlsx
Development/.ipynb_checkpoints/: Biologic_dev-checkpoint.ipynb  Fixing cycles skipping to 0-checkpoint.ipynb  ICI development-checkpoint.ipynb
GalvPyle/: BiologicData.py  CycVolt.py  GamryEIS.py
Legacy/: BiologicData.py  BiologicNew.py  ICI_old.py
backup/GalvPyle/: BiologicData.py  ICI.py  Plateaus.py
src/.ipynb_checkpoints/: BiologicNew-checkpoint.py
src/GalvPyle/: GamryCycles.py  GamryData.py  MultiCycVolt.py  Plateaus.py  __init__.py  mpt_to_df.py
src/GalvPyle.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/GalvPyle/.ipynb_checkpoints/: ICI-checkpoint.py
